# kmer

./: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/data/: list_with_taxonomy.csv
src/data/GCF_000005845.2_ASM584v2/: annotation_hashes.txt
src/data/GCF_000006765.1_ASM676v1/: GCF_000006765.1_ASM676v1_assembly_report.txt  GCF_000006765.1_ASM676v1_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_000006945.2_ASM694v2/: GCF_000006945.2_ASM694v2_assembly_report.txt  annotation_hashes.txt
src/data/GCF_000009045.1_ASM904v1/: GCF_000009045.1_ASM904v1_assembly_report.txt  GCF_000009045.1_ASM904v1_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_000013425.1_ASM1342v1/: GCF_000013425.1_ASM1342v1_assembly_report.txt  GCF_000013425.1_ASM1342v1_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_000022005.1_ASM2200v1/: GCF_000022005.1_ASM2200v1_assembly_report.txt  GCF_000022005.1_ASM2200v1_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_000195955.2_ASM19595v2/: GCF_000195955.2_ASM19595v2_assembly_report.txt  GCF_000195955.2_ASM19595v2_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_008369605.1_ASM836960v1/: GCF_008369605.1_ASM836960v1_assembly_report.txt  GCF_008369605.1_ASM836960v1_assembly_stats.txt  annotation_hashes.txt
src/data/GCF_009769205.1_ASM976920v1/: GCF_009769205.1_ASM976920v1_assembly_report.txt  GCF_009769205.1_ASM976920v1_assembly_stats.txt  annotation_hashes.txt
src/result/: NC_002516.2.csv  NC_011916.1.csv
src/scripts/: count_kmer.py  main.py
(+6 files in other folders)
